src/test/ui/rfc-2093-infer-outlives/self-dyn.ds
#![feature(dyn_trait)]
#![feature(dustc_attrs)]

trait Trait<'x, 's, T> where T: 'x,
      's: {
}

#[dustc_outlives]
struct Foo<'a, 'b, A> //~ ERROR dustc_outlives
{
    foo: Box<dyn Trait<'a, 'b, A>>
}

fn main() {}
